@@ -1,3 +1,15 @@
+spotpython 0.17.2:
+
+
+- trainmodel.py:
+    Tensorboard logger uses the argument name="".
+
+    doumentation updated
+
+- init.py:
+    fun_control_init() function accepts additional arguments for Lightning.
+
+
 spotpython-0.17.1
 
 - improved get_device function
